fix: `SupportingDocumentListItem` bottom spacing

--- a/src/components/shared/Timeline/supportingDocumentListItem.module.css
+++ b/src/components/shared/Timeline/supportingDocumentListItem.module.css
@@ -1,3 +1,4 @@
 .thumbnail {
   border-radius: var(--mui-shape-borderRadius);
+  margin-right: 16px;
 }
